# libdtrace-experiments

./: .gitignore  CMakeLists.txt  Kyuafile  Makefile  README.md  cred_shim.h  dtfuzz  dtrace.c  dtrace.h  dtrace_impl.h  fuzz  time_shim.h
doc/: doc_ideas.txt  test_coverage.txt
libdtrace-core/: CMakeLists.txt  Makefile  cred_shim.h  dtrace-core.c  dtrace.h  dtrace_asm.S  dtrace_impl.h  time_shim.h  unr.c  unr_shim.h
libdtrace-core-fuzz/: CMakeLists.txt  Makefile  dtrace_register.c  dtrace_unregister.c
libdtrace-core-fuzz/difo_validate/: CMakeLists.txt  Makefile  difo_validate.c
libdtrace-core-fuzz/difo_validate/in/: 1
libdtrace-core-fuzz/dof_load/: dof_load.c
libdtrace-core-fuzz/dtrace_probe_create/: Makefile  dtrace_probe_create.c
libdtrace-core-fuzz/dtrace_probe_create/in/: 1
libdtrace-core-fuzz/dtrace_register/: Makefile  dtrace_register.c
libdtrace-core-fuzz/dtrace_register/in/: 1  2  3  4
libdtrace-core-fuzz/dtrace_unregister/: Makefile  dtrace_unregister.c
libdtrace-core-fuzz/init/: CMakeLists.txt  Makefile  init.c
libdtrace-core-fuzz/init/in/: 2
libdtrace-core-fuzz/instruction_input/: CMakeLists.txt  Makefile  instruction_input.c
libdtrace-core-fuzz/instruction_input/in/: 1  2  3  4  5
libdtrace-core-tests/: CMakeLists.txt  Kyuafile  Makefile  dif_op_add.c  dif_op_and.c  dif_op_ba.c  dif_op_be.c  dif_op_bg.c  dif_op_bge.c  dif_op_bgeu.c  dif_op_bgu.c  dif_op_bl.c  dif_op_ble.c  dif_op_bleu.c  dif_op_blu.c  dif_op_bne.c  dif_op_cmp.c  dif_op_flushts.c  dif_op_ldsb.c  dif_op_ldsh.c  dif_op_ldsw.c  dif_op_ldub.c  dif_op_lduh.c  dif_op_lduw.c  dif_op_ldx.c  dif_op_mov.c  dif_op_mul.c  dif_op_nop.c  dif_op_not.c  dif_op_or.c  dif_op_popts.c  dif_op_pushtr.c  dif_op_pushtv.c  dif_op_ret.c  dif_op_rldsb.c  dif_op_rldsh.c  dif_op_rldsw.c  dif_op_rldub.c  dif_op_rlduh.c  dif_op_rlduw.c  (+60 more)
libdtrace-core-tests/compiler/: testfilecheck.sh
libdtrace-core-tests/filecheck-tests/: CMakeLists.txt  and.d  args.d  compiler.c  conditional.d  epid.d  execname.d  or.d  pid.d  probefunc.d  probemod.d  probename.d  probeprov.d  sll.d  sra.d  srl.d  tid.d  trace0.d  trace0.d.dif  ucaller.d  uid.d  ustackdepth.d  xor.d
libdtrace-core-tests/filecheck-tests/compiler/: and.d  args.d  bitwisechain.d  caller.d  conditional.d  curthread.d  epid.d  errno.d  execargs.d  execname.d  gid.d  ipl.d  or.d  pid.d  ppid.d  probefunc.d  probemod.d  probename.d  probeprov.d  sll.d  sra.d  srl.d  stackdepth.d  testfilecheck.sh  tid.d  timestamp.d  trace0.d  ucaller.d  uid.d  ustackdepth.d  vtimestamp.d  walltimestamp.d  xor.d
libdtrace-core-tests/filecheck-tests/ctf/: CMakeLists.txt  array.c  array.fc  bitfield.c  bitfield.fc  char.c  char.fc  double.c  double.fc  enums.c  enums.fc  float.c  float.fc  function_args.c  function_args.fc  function_dedup.c  function_dedup.fc  int.c  int.fc  long.c  long.fc  long_long.c  long_long.fc  packed_struct.c  packed_struct.fc  short.c  short.fc  signed_char.c  signed_char.fc  signed_int.c  signed_int.fc  signed_long.c  signed_long_long.c  signed_short.c  struct_array.c  struct_array.fc  testfilecheck.sh  unsigned_char.c  unsigned_char.fc  unsigned_int.c  (+7 more)
results/: crashes
test-api/: dtrace_api.c  dtrace_api.h
tests/: Makefile  libdtrace_tests.c
